Fix missing gap in header

--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ hr.index {
 h1 {
 	background-color: rgb(51, 51, 50);
 	padding: 0.5rem;
+	margin-top: 1rem;
 }
 
 li {
